gitops/service-mesh/istio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
