gitops/service-mesh/kiali.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kiali
