gitops/service-mesh/kiali-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kiali
  namespace: kiali
spec:
  to:
    kind: Service
    name: kiali
  port:
    targetPort: http
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
